<resources>
    <string name="app_name">We Up</string>

    <string name="上传图片">上传图片</string>
    <string name="account">学号</string>
    <string name="password">密码</string>
    <string name="login_in">登&#8194;&#8194;录</string>

    <string name="life">生活</string>
    <string name="study">学习</string>
    <string name="sport">运动</string>
    <string name="i">我的</string>

    <string name="i_name">姓名姓</string>
    <string name="i_accounts">0000000000</string>
    <string name="upload_head">上传头像</string>
    <string name="update_password">修改密码</string>
    <string name="login_out">退出登录</string>

    <string name="go_back">返回</string>

    <string name="old_password">请输入旧密码</string>
    <string name="new_password">请输入新密码</string>
    <string name="con_password">再次确认新密码</string>
    <string name="confirm">确&#8194;&#8194;定</string>
    <string name="今日步数">今日步数</string>
    <string name="今日目标">今日目标：</string>
    <string name="排行榜">排行榜</string>

    <string name="action_settings">Settings</string>

    <string name="track_line">画笔</string>
    <string name="straight_line">Straight Line</string>
    <string name="rectangle">Rectangle</string>
    <string name="oval">Oval</string>
    <string name="circle">Circle</string>
    <string name="dots">Dots</string>
    <string name="Eraser">橡皮擦</string>
    <string name="datetime_dialog_ok">设置</string>
    <string name="datetime_dialog_cancel">取消</string>
    <string name="remindsetting_name">提醒设置</string>

    <string-array name="completion_status">
        <item>未完成</item>
        <item>已完成</item>
        <item>暂时搁置</item>
    </string-array>
</resources>
