<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdatePasswordActivity">

    <!-- 顶部栏 -->
    <fragment
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:name="com.team.weup.TopFragment"
        android:id="@+id/top_muen"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_muen"
        android:layout_marginTop="30dp">

        <EditText
            style="@style/login_in_et"
            android:inputType="textPassword"
            android:hint="@string/old_password"
            android:id="@+id/old_password_et"/>

        <EditText
            style="@style/login_in_et"
            android:inputType="textPassword"
            android:hint="@string/new_password"
            android:id="@+id/new_password_et"/>
        <EditText
            style="@style/login_in_et"
            android:inputType="textPassword"
            android:hint="@string/con_password"
            android:id="@+id/con_password_et"/>
        <Button
            style="@style/login_in_bt"
            android:text="@string/confirm"
            android:id="@+id/con_update_password_bt"/>

    </LinearLayout>

    <!-- 底部栏 -->
    <fragment
        android:id="@+id/bf_in_i"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.team.weup.BottomFragment"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>